--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,8 @@
       <id>css</id>
       <build>
         <plugins>
+
+        
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
@@ -292,7 +294,11 @@
               </execution>
             </executions>
           </plugin>
-
+          <plugin>
+        <groupId>org.codehaus.sonar</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.9.1.2184</version>
+        </plugin>
           <plugin>
             <groupId>com.gitlab.haynes</groupId>
             <artifactId>libsass-maven-plugin</artifactId>
