--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'java'
 group = 'org.springframework.samples'
 version = '3.0.0'
 sourceCompatibility = '17'
-
+targetCompatibility  = '17'
 repositories {
   mavenCentral()
 }
