--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+     <artifactId>sonar-maven-plugin</artifactId>
+       <version>3.8.3</version>
+
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.1.2</version>
