--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.sonarsource.scanner.maven</groupId>
      <artifactId>sonar-maven-plugin</artifactId>
        <version>3.8.3</version>
 
